<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/mylogo"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_forgot_password"
        android:textColor="?android:attr/colorButtonNormal"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true" />
    <kz.putandgo.kuanysh.menuexample.MaskedEditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="202dp"
        android:autoText="false"
        android:background="@drawable/test"
        android:ems="10"
        android:textColor="@android:color/holo_orange_dark"
        android:textColorHint="?android:attr/colorButtonNormal"
        android:textColorLink="@color/blue"
        android:textSize="13dp"
        custom:mask="+7(7**)***-**-**"
        android:inputType="phone"
        custom:placeholder="_"
        android:layout_marginBottom="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <requestFocus />
    </kz.putandgo.kuanysh.menuexample.MaskedEditText>


    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="14dp"
        android:background="@drawable/test"
        android:ems="10"
        android:hint="Введите пароль"
        android:inputType="textPassword"
        android:textColor="@android:color/holo_orange_dark"
        android:textColorHint="?android:attr/colorButtonNormal"
        android:textSize="13dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="45dp"
        android:background="@drawable/button"
        android:text="@string/login_button"
        android:textColorLink="@color/blue"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/text_registrate"
        android:textColor="?android:attr/colorButtonNormal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>